fix staff cannot access users api, field highlight for update forms, customer form only require fullname and phone number